# UnityOpenGLAsyncReadback

./: .gitignore  LICENSE  README.md
NativePlugin/: CMakeLists.txt
NativePlugin/src/: AsyncGPUReadbackPlugin.cpp  TypeHelpers.hpp
UnityExampleProject/Assets/: AsyncGPUReadbackPlugin.cs  ComputeBufferTest.cs
UnityExampleProject/Assets/OpenglAsyncReadback/ExampleScenes/: ComputeBufferTest.cs  Scene.unity
UnityExampleProject/Assets/OpenglAsyncReadback/Scripts/: AsyncGPUReadbackPlugin.cs  AsyncGPUReadbackStarter.cs  AsyncReadbackUpdater.cs  ComputeBufferTest.cs  UsePlugin.cs
UnityExampleProject/Assets/Scenes/: Scene.unity
UnityExampleProject/Assets/Scripts/: UsePlugin.cs
UnityExampleProject/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
